# UpscaylUltramixAndroid

./: .gitattributes  .gitignore  README.md  README_VI.md  build_windows.bat  gradle.properties  pdf_merger_modern.py  settings.gradle
.github/workflows/: android-build.yml  android.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: PUT_MODEL_FILES_HERE.txt  README.txt  xlsr_3x_w8a8.tflite
app/src/main/cpp/: CMakeLists.txt  realesrgan.cpp  realesrgan.h  upscaler_jni.cpp
app/src/main/java/com/vung/upscaylultramix/: MainActivity.kt  RuntimeDelegateFactory.kt  TfliteModelRunner.kt  TileProcessor.kt  XlsrUpscaleEngine.kt
app/src/main/res/drawable/: bg_badge.xml  ic_folder_24.xml  ic_image_24.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_open_folder_24.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/layout-sw600dp/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
